# usecallmanager-services

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml
src/usecallmanager_services/: __init__.py  __main__.py  app.py  asterisk_manager.py  config.py  dependencies.py  xml_responses.py
src/usecallmanager_services/routers/: __init__.py  authentication.py  directory.py  directory_api.py  information.py  problem_report.py  quality_report.py  reports_api.py  services.py
tests/: __init__.py
